--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">StressDataCollector</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="app_name">Stress data collection app</string>
+    <string name="tab_dashboard">Dashboard</string>
+    <string name="tab_selfreport">Self-report</string>
+    <string name="new_self_report">Submit self-report</string>
 </resources>
