--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <!-- API urls -->
     <string name="api_base_url" translatable="false">http://172.30.1.77:8000/api/</string>
 
+    <!-- Room -->
+    <string name="room_db_name" translatable="false">app-database</string>
+
     <!-- Auth page details -->
     <string name="dummy_name" translatable="false">홍길동</string>
     <string name="date_of_birth_format" translatable="false">YYYYMMDD</string>
