resolves disabled button issue in auth page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,8 @@
 
     <string name="authenticate">Authenticate</string>
     <string name="auth_success">Authenticated successfully</string>
-    <string name="auth_failure">Failed to authenticate, please check your internet connection!</string>
+    <string name="auth_failure">Failed, try again please!</string>
+    <string name="input_failure">Please check the inputs!</string>
 
     <string name="push_title">Stress report time!</string>
     <string name="push_prompt">Please log your current situation and stress levels.</string>
