--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">Stress data collection app</string>
 
     <!-- API urls -->
-    <string name="api_base_url" translatable="false">http://20.0.0.65:8000/api/</string>
+    <!--string name="api_base_url" translatable="false">http://20.0.0.65:8000/api/</string-->
+    <string name="api_base_url" translatable="false">http://easytrack.ddns.net:40080/api/</string>
+
 
     <!-- Room -->
     <string name="room_db_name" translatable="false">app-database</string>
@@ -63,11 +65,30 @@
     <string name="q8_context_activity">8. Please report your current activity.</string>
     <string name="submit">Submit</string>
 
-    <string name="authenticate">Authenticate</string>
-    <string name="auth_success">Authenticated successfully</string>
-    <string name="auth_failure">Failed, try again please!</string>
-    <string name="input_failure">Please check the inputs!</string>
+    <string name="sign_in">Sign In</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="sign_in_success">Signed in successfully</string>
+    <string name="sign_up_success">Signed up successfully. Now you can sign in!</string>
+    <string name="sign_in_failure">Failed to sign in, please check your inputs and try again!</string>
+    <string name="sign_up_failure">Failed to sign up, please check your inputs and try again!</string>
 
     <string name="push_title">Stress report time!</string>
     <string name="push_prompt">Please log your current situation and stress levels.</string>
+    <string name="email">Email</string>
+    <string name="example_email_com" translatable="false">example@email.com</string>
+    <string name="gender">Gender</string>
+    <string name="fix_date_toast">Please check the date format! (YYYMMDD)</string>
+    <string name="password">Password</string>
+    <string name="dummy_password_hint" translatable="false">***</string>
+    <string name="repeat_password">Repeat the password</string>
+    <string name="passwords_dont_match">Passwords don\'t match, please try again!</string>
+    <string name="sign_up_prompt">Sign up!</string>
+    <string name="sign_in_prompt">Sign in!</string>
+    <string name="no_account_prompt">Don\'t have account yet?</string>
+    <string name="yes_account_prompt">Already have an account?</string>
+
+    <string-array name="gender_options" translatable="false">
+        <item>M</item>
+        <item>F</item>
+    </string-array>
 </resources>
