--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">스마트 워치 스트레스 센싱</string>
+    <string name="app_name">스트레스 자가 진단</string>
 
     <!-- API urls -->
-    <string name="api_base_url" translatable="false">http://20.0.0.65:80/api/</string>
+    <!--    <string name="api_base_url" translatable="false">http://20.0.0.65:80/api/</string>-->
 
-    <!--    <string name="api_base_url" translatable="false">http://easytrack.ddns.net:40080/api/</string>-->
+    <string name="api_base_url" translatable="false">http://easytrack.ddns.net:40080/api/</string>
 
     <!-- Room -->
     <string name="room_db_name" translatable="false">app-database</string>
@@ -31,8 +31,8 @@
     <string name="stresslvl3">Moderately stressed</string>
     <string name="stresslvl4">Extremely stressed</string>
 
-    <string name="socialsettings_asocial">👤 Asocial (watching TV, riding a bus)</string>
-    <string name="socialsettings_social">👥 Social (conversing, in a class)</string>
+    <string name="socialsettings_asocial">👤 Asocial (no social interaction with anyone)</string>
+    <string name="socialsettings_social">👥 Social (engaging in an activity with someone)</string>
 
     <string name="location_home">🏠 Home (home, dorm)</string>
     <string name="location_work">🏢 Work (lab, office)</string>
