--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,8 @@
     <string name="app_name">스트레스 자가 진단</string>
 
     <!-- API urls -->
-    <!--    <string name="api_base_url" translatable="false">http://20.0.0.65:80/api/</string>-->
-
-    <string name="api_base_url" translatable="false">http://easytrack.ddns.net:40080/api/</string>
+    <string name="api_base_url" translatable="false">http://20.0.0.65:80/api/</string>
+    <!--    <string name="api_base_url" translatable="false">http://easytrack.ddns.net:40080/api/</string>-->
 
     <!-- Room -->
     <string name="room_db_name" translatable="false">app-database</string>
